add Android 12 requirements

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
            id="cordova-plugin-firebase-messaging-extension"
-      version="2.0.0">
+      version="2.0.1">
 
     <name>Cordova Plugin Firebase Messaging Extension</name>
     <description>Cordova plugin to extend Firebase messaging to a project with UrbanAirship and Intercom</description>
@@ -27,8 +27,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <service android:name="ca.koho.cordova.plugin.firebase.messaging.FirebaseMessagingExtensionService">
-                <intent-filter>
+            <service android:name="ca.koho.cordova.plugin.firebase.messaging.FirebaseMessagingExtensionService" android:exported="false">
+                <intent-filter android:priority="999">
                     <action android:name="com.google.firebase.MESSAGING_EVENT"/>
                 </intent-filter>
             </service>
