--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-plugin-firebase-messaging-extension",
-  "version": "2.0.0",
-  "description": "Cordova plugin to extend Firebase messaging to a project with UrbanAirship and Intercom",
+  "version": "1.1.4",
+  "description": "Cordova plugin to extend Firebase messaging to a project with Intercom",
   "license": "MIT",
   "cordova": {
     "id": "cordova-plugin-firebase-messaging-extension",
