remove urban airship

--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
       version="1.1.4">
 
     <name>Cordova Plugin Firebase Messaging Extension</name>
-    <description>Cordova plugin to extend Firebase messaging to a project with UrbanAirship and Intercom</description>
+    <description>Cordova plugin to extend Firebase messaging to a project with Intercom</description>
     <license>MIT</license>
     <keywords>cordova</keywords>
 
