--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </engines>
 
     <platform name="android">
+        <preference name="FIREBASE_CORE_VERSION" default="16.0.8"/>
+        <preference name="FIREBASE_MESSAGING_VERSION" default="20.+"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FirebaseMessagingExtension">
@@ -29,6 +31,12 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 </intent-filter>
             </service>
         </config-file>
+
+        <dependency id="cordova-support-google-services" version="^1.3.0"/>
+        <dependency id="cordova-plugin-intercom" version="^8.0.0"/>
+
+        <framework src="com.google.firebase:firebase-core:$FIREBASE_CORE_VERSION" />
+        <framework src="com.google.firebase:firebase-messaging:$FIREBASE_MESSAGING_VERSION" />
 
         <source-file src="src/android/FirebaseMessagingExtensionService.java"
             target-dir="src/ca/koho/cordova/plugin/firebase/messaging" />
